--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Custom selected files
+
+/CSharpCon22Demo/Helpers/CognitiveServicesHelper.cs
+
 # User-specific files
 *.rsuser
 *.suo
