--- a/CSharpCon22Demo/CSharpCon22Demo.csproj
+++ b/CSharpCon22Demo/CSharpCon22Demo.csproj
@@ -48,4 +48,8 @@
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.ComputerVision" Version="6.0.0" />
+	</ItemGroup>
+
 </Project>
